--- a/album.html
+++ b/album.html
@@ -14,6 +14,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="css/album.css" rel="stylesheet">
+    <script src="js/data.js" defer></script>
+    <script src="js/album.js" defer></script>
 </head>
 
 <body>
@@ -41,69 +43,12 @@
     <main class="container d-flex">
         <section class="left-part w-50">
             <h4>Плейлист</h4>
-            <div class="card mb-3">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="assets/pattern.jpg" class="img-fluid rounded-start" alt="Узор">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h4 class="card-title">Для абстрактных идей</h4>
-                            <p class="card-text">Подборка для настоящих мечтателей</p>
-                            <p class="card-text"><small class="text-muted">2023</small></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
         </section>
         <section class="right-part w-50">
             <h4>Треки</h4>
             <ul class="list-group">
-                <a href="#">
-                    <li class="list-group-item d-flex">
-                        <div class="d-flex">
-                            <img src="assets/play.svg" width="40px">
-                            <div>
-                                <p>Мечта</p><small class="text-muted">Федор Максимов</small>
-                            </div>
-                        </div>
-                        <p>2:00</p>
-                    </li>
-                </a>
-                <a href="#">
-                    <li class="list-group-item d-flex">
-                        <div class="d-flex">
-                            <img src="assets/play.svg" width="40px">
-                            <div>
-                                <p>Мысли</p>
-                                <small class="text-muted">Влад Домрачев</small>
-                            </div>
-                        </div>
-                        <p>1:59</p>
-                    </li>
-                </a>
-                <a href="#">
-                    <li class="list-group-item d-flex">
-                        <div class="d-flex">
-                            <img src="assets/play.svg" width="40px">
-                            <div>
-                                <p>Lorem Ipsum</p><small class="text-muted">Виктор Неверов</small>
-                            </div>
-                        </div>
-                        <p>2:01</p>
-                    </li>
-                </a>
-                <a href="#">
-                    <li class="list-group-item d-flex">
-                        <div class="d-flex">
-                            <img src="assets/play.svg" width="40px">
-                            <div>
-                                <p>Dolor sit</p><small class="text-muted">Эля Меджидова</small>
-                            </div>
-                        </div>
-                        <p>1:58</p>
-                    </li>
-                </a>
+                
             </ul>
         </section>
     </main>
