--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="favicon.svg" rel="icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="css/index.css" rel="stylesheet">
+    <script src="js/data.js" defer></script>
+    <script src="js/index.js" defer></script>
   </head>
 <body>
         <header class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
@@ -35,50 +37,7 @@
           <section>
             <h3 class="text-center">Фоновая музыка</h3>
             <div class="d-flex justify-content-center row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4">
-              <div class="col">
-                <a href="album.html">
-                  <div class="card">
-                    <img src="assets/pattern.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h4 class="card-title">Для абстрактных идей</h4>
-                      <p class="card-text">Подборка для настоящих мечтателей</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="col">
-                <a href="#">
-                  <div class="card">
-                    <img src="assets/pattern3.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h4 class="card-title">Для мыслей о далеком</h4>
-                      <p class="card-text">Музыка о покорении космоса</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="col">
-                <a href="#">
-                  <div class="card">
-                    <img src="assets/pattern2.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h4 class="card-title">Для учебы</h4>
-                      <p class="card-text">Микс спокойной музыки, чтобы не отвлекаться</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="col">
-                <a href="#">
-                  <div class="card">
-                    <img src="assets/pattern4.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h4 class="card-title">Для уборки</h4>
-                      <p class="card-text">Делает даже рутинную работу чуточку лучше</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
+              
             </div>
           </section>
         </main>
